--- a/construction/square-footage-calculator.html
+++ b/construction/square-footage-calculator.html
@@ -544,7 +544,7 @@ Clear all changes
 </section>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
         <a href="/conversion/hours-to-week-conversion">Hours to Week Conversion</a>
         <a href="/conversion/minutes-to-hours-converter">Minutes to Hours Converter</a>
