--- a/conversion/roman-numeral-converter.html
+++ b/conversion/roman-numeral-converter.html
@@ -246,10 +246,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar numeral systems converters  🔢</h2>
       <div class="similar-calculators">
-        <a href="/conversion/roman-numeral-date-converter">Roman Numeral Date Converter</a>
-        <a href="/everyday-life/age-difference-calculator">Age Difference Calculator</a>
+        <a href="/conversion/roman-numeral-date-converter">Roman numeral date</a>
       </div>
     </div>
 <article class="description-txt">
