--- a/conversion/roman-numeral-date-converter.html
+++ b/conversion/roman-numeral-date-converter.html
@@ -180,16 +180,16 @@ Everyday Life
 
 <div class="container">
   <div data-input-id="date-in-numeric-or-roman-numeral-form-roman-numeral-date-converter" class="input-group">
-    <label>Date in numeric or Roman numeral<svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label
+    <label>Date in numeric or roman numeral<svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label
     >
-    <div style="display: flex;gap: 3px;" class="currency-or-unit-input">
-  <input style="text-align: center;padding: 0;" type="text" id="NumberOrRomanNumeralYear">
+    <div  class="currency-or-unit-input">
+  <input  type="text" id="NumberOrRomanNumeralYear">
   <span class="unit-display">year
   </span>
-  <input style="text-align: center;padding: 0;" type="text" id="NumberOrRomanNumeralMonth">
+  <input  type="text" id="NumberOrRomanNumeralMonth">
   <span class="unit-display">month</span>
   
-  <input style="text-align: center;padding: 0;font-size: .9em;" type="text" id="NumberOrRomanNumeralDay">
+  <input type="text" id="NumberOrRomanNumeralDay">
   <span class="unit-display">day
   </span>
 </div>
@@ -246,11 +246,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar numeral systems converters 🔢</h2>
       <div class="similar-calculators">
-        <a href="/conversion/roman-numeral-converter">Roman Numeral Converter</a>
-        <a href="/everyday-life/age-calculator">Age Calculator </a>
-        <a href="/everyday-life/age-difference-calculator">Age Difference Calculator</a>
+        <a href="/conversion/roman-numeral-converter">Roman numeral converter</a>
       </div>
     </div>
 <article class="description-txt">
