--- a/chemistry/atom-calculator.html
+++ b/chemistry/atom-calculator.html
@@ -311,7 +311,7 @@ Everyday Life
   
 </div>
 
-<div style="margin-top: 4px;" class="container">
+<div container-space-top class="container">
   <details open>
     <summary>Atomic composition</summary>
     <div data-input-id="number-of-protons-atom-calculator" class="input-group">
