--- a/construction/square-footage-calculator.html
+++ b/construction/square-footage-calculator.html
@@ -187,7 +187,7 @@ Everyday Life
     </label>
     <div class="input-select-wrap">
     <input inputmode="numeric" pattern="[0-9]*"  type="text" id="width" >
-    <select style="flex-basis: 50%;"  id="widthUnit">
+    <select id="widthUnit">
       
       <option value="centimetres">centimetres</option>
       <option value="meters">meters</option>
@@ -388,7 +388,7 @@ Everyday Life
   </div>
 </div>
 
-<div style="margin-top: 4px;" class="container">
+<div container-space-top class="container">
 
   <details open>
     <summary>Cost of materials</summary>
