--- a/ecology/vegan-footprint-calculator.html
+++ b/ecology/vegan-footprint-calculator.html
@@ -188,7 +188,7 @@ Everyday Life
 
 <div class="input-select-wrap">
 <input inputmode="numeric" pattern="[0-9]*" type="text" id="TimeYouHaveBeenVegan" >
-<select style="flex-basis: 40%;" id="TimeYouHaveBeenVeganUnit">
+<select id="TimeYouHaveBeenVeganUnit">
   <option value="days">days</option>
   <option value="weeks">weeks</option>
   <option value="months">months</option>
@@ -233,9 +233,11 @@ Everyday Life
   </div>
 </div>
 
-<div style="margin-top: 4px;" class="container">
+<div container-space-top class="container">
   <div class="input-group">
-    <label>you've saved...</label>
+    <summary class="no-arrow">
+      You've saved...
+    </summary>
   </div>
   <div data-input-id="animal-lives-vegan-footprint-calculator" class="input-group">
     <label>Animal lives
