--- a/finance.html
+++ b/finance.html
@@ -224,10 +224,12 @@ Everyday Life
 </ul>
   <h2>Microeconomics calculators 💲</h2>
   <ul>
+    <li><a href="/finance/profit-calculator">Profit Calculator</a></li>
     <li><a href="/finance/revenue-calculator">Revenue Calculator</a></li>
   </ul>
   <h2>Mortgage and real estate calculators 💰</h2>
   <ul>
+    <li><a href="/finance/3x-rent-calculator">3x Rent Calculator</a></li>
     <li><a href="/finance/rent-calculator">Rent Calculator</a></li>
   </ul>
   
