--- a/finance/roi-calculator.html
+++ b/finance/roi-calculator.html
@@ -276,11 +276,11 @@ Everyday Life
   
 <div style="display: flex;gap: 5px;" class="input-group">
   <label style="flex-basis: 30%;text-align: center;">From</label>
-  <input style="flex-basis: 70%;" type="date" id="dateFrom" />
+  <input type="date" id="dateFrom" />
 </div>
 <div style="display: flex;gap: 5px;" class="input-group">
   <label style="flex-basis: 30%;text-align: center;">To</label>
-  <input style="flex-basis: 70%;" type="date" id="dateTo" />
+  <input type="date" id="dateTo" />
 </div>
 <div class="input-options">
    <div class="input-options-item">
