--- a/other/tip-calculator.html
+++ b/other/tip-calculator.html
@@ -373,7 +373,7 @@ Everyday Life
   
 </div>
 
-<div style="margin-top: 4px;" class="container">
+<div container-space-top class="container">
 
   <details open>
     <summary>Am splitting the bill</summary>
