--- a/statistics/risk-calculator.html
+++ b/statistics/risk-calculator.html
@@ -321,7 +321,7 @@ Everyday Life
 </div>
 
   
-<div style="margin-top: 5px;" class="container">
+<div container-space-top class="container">
   <div class="input-group">
   <label>Option B </label>
 </div>
