--- a/education/cgpa-calculator-nigeria.html
+++ b/education/cgpa-calculator-nigeria.html
@@ -605,7 +605,7 @@ function addSemester() {
   semesterDiv.className = "semester";
   semesterDiv.dataset.semester = semesterCount;
   semesterDiv.innerHTML = `
-  <div style="margin-top: 4px;" class="container" semesterNG>
+  <div container-space-top class="container" semesterNG>
   <details>
     <summary>Semester ${semesterCount} <button id="deleteBtn" class="btn" onclick="deleteSemester(this)">Delete Semester</button></summary>
     <div class="semester-title">
