--- a/finance/cd-calculator.html
+++ b/finance/cd-calculator.html
@@ -545,9 +545,9 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
-     The CD Calculatorletsyou estimate the growth of your money in a Certificate of Deposit (CD).
+     The CD Calculator lets you estimate the growth of your money in a Certificate of Deposit (CD).
    </p>
    <h2 class="not-hd">How to use the CD calculator</h2>
    <p>Step by step guide on using the CD calculator</p>
