--- a/finance/nigeria-personal-income-tax-calculator.html
+++ b/finance/nigeria-personal-income-tax-calculator.html
@@ -236,7 +236,7 @@ Everyday Life
   </div>
 </div>
 
-<div style="margin-top: 4px;" class="container">
+<div container-space-top class="container">
 
   <details>
     <summary>Additional Deductions (Optional)</summary>
