--- a/finance/rent-calculator.html
+++ b/finance/rent-calculator.html
@@ -178,7 +178,6 @@ Everyday Life
 
 <div class="container">
 
-  <!-- Pre-Tax Income -->
   <div data-input-id="pre-tax-income-rent-calculator" class="input-group">
     <label>Your Pre-Tax Income
     <svg id="input-tip-icon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M440-280h80v-240h-80v240Zm40-320q17 0 28.5-11.5T520-640q0-17-11.5-28.5T480-680q-17 0-28.5 11.5T440-640q0 17 11.5 28.5T480-600Zm0 520q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"/></svg>
@@ -229,7 +228,6 @@ Everyday Life
  </div>
   </div>
 
-  <!-- Income Frequency -->
   <div data-input-id="income-frequency-rent-calculator" class="input-group">
     <label>Income Frequency
     
@@ -448,7 +446,6 @@ Everyday Life
  </div>
   </div>
 
-  <!-- Output -->
   <div class="input-group">
     <div class="output-group" class="output-box"></div>
   </div>
@@ -484,7 +481,7 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd"></span></h2>
    <p>
      Our rent calculator estimates how much rent you can afford.
    </p>
@@ -660,10 +657,8 @@ border-radius: 10px;
   const utilityCheckbox = document.getElementById('include-utilities');
 const utilitiesGroup = document.getElementById('utilities-group');
 
-utilityCheckbox.addEventListener('change', () => {
-  utilitiesGroup.style.display = utilityCheckbox.checked ? 'none' : 'block';
-});
-utilitiesGroup.style.display = utilityCheckbox.checked ? 'none' : 'block';
+(utilityCheckbox.onchange = () =>
+  utilitiesGroup.toggleAttribute('hide-element', utilityCheckbox.checked))();
 
 function calculateResults() {
   const income = parseFloat(document.getElementById('income').value.replace(/,/g, '')) || 0;
