--- a/food/grams-to-cups-converter.html
+++ b/food/grams-to-cups-converter.html
@@ -234,8 +234,8 @@ Everyday Life
   </label>
   <div class="input-select">
     <div class="input-select-wrap">
-    <input inputmode="numeric" pattern="[0-9]*" type="text" id="weightInput" style="flex-basis: 50%;"/>
-    <select style="flex-basis: 50%;" id="massUnits" name="massUnits">
+    <input inputmode="numeric" pattern="[0-9]*" type="text" id="weightInput" />
+    <select id="massUnits" name="massUnits">
   <option value="ug">micrograms (ug)</option>
   <option value="mg">milligrams (mg)</option>
   <option value="g">grams (g)</option>
@@ -297,8 +297,8 @@ Everyday Life
   <div class="input-group">
     
     <div class="input-select-wrap">
-      <input style="flex-basis: 50%;"   inputmode="numeric" pattern="[0-9]*" type="text"  id="cupsOutput" />
-      <select style="flex-basis: 50%;" id="cupType">
+      <input  inputmode="numeric" pattern="[0-9]*" type="text"  id="cupsOutput" />
+      <select id="cupType">
         <option value="US customary cups (recipes) (US cups)">US Cups</option>
         <option value="US legal cups (nutrition) (US legal cups)">US legal cups</option>
         <option value="UK/Australia/Canada/South Africa metric cups (UK/AU/ CA/ZA cups)"> (UK/AU/ CA/ZA cups)</option>
@@ -376,7 +376,7 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      The Grams to Cups Converter is a useful kitchen tool, and it simplifies daily cooking and baking activities. It informs you of the number of grams in a cup.
    </p>
@@ -516,12 +516,6 @@ Everyday Life
 
     <span>Copyright by Calclulo Ltd.</span>
   </footer>
-  
-  <style>
-  .input-select-wrap select{
-    flex-basis: 60%;
-  }
-  </style>
   
   <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
 <script src="/assets/js/search.js" defer crossorigin="anonymous"></script>
