--- a/math/percentage-calculator.html
+++ b/math/percentage-calculator.html
@@ -176,7 +176,7 @@ Everyday Life
 </h1>
 </div>
 
-  <div id="percentageSecOne" class="container">
+  <div container-space-bottom id="percentageSecOne" class="container">
     <div data-input-id="sec-one-percentage-calculator" class="input-group">
       <label>section one <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
     
@@ -231,7 +231,7 @@ Everyday Life
   </div>
    </div>
   
-  <div id="percentageSecTwo" class="container" style="margin-top: 5px;">
+  <div container-space-bottom id="percentageSecTwo" class="container">
     <div data-input-id="sec-two-percentage-calculator" class="input-group">
       <label>section two <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
     
@@ -276,7 +276,7 @@ Everyday Life
 
   </div>
 
-<div id="percentageSecThree" class="container" style="margin-top: 5px;">
+<div id="percentageSecThree" class="container">
   <div data-input-id="sec-three-percentage-calculator" class="input-group">
     <label>section three <svg class="expanded-input-option-svg" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#1f1f1f"><path d="M240-400q-33 0-56.5-23.5T160-480q0-33 23.5-56.5T240-560q33 0 56.5 23.5T320-480q0 33-23.5 56.5T240-400Zm240 0q-33 0-56.5-23.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 33-23.5 56.5T480-400Zm240 0q-33 0-56.5-23.5T640-480q0-33 23.5-56.5T720-560q33 0 56.5 23.5T800-480q0 33-23.5 56.5T720-400Z"/></svg></label>
   
