--- a/physics/bullet-energy-calculator.html
+++ b/physics/bullet-energy-calculator.html
@@ -373,7 +373,7 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      The Bullet Energy Calculator makes finding the energy of a bullet in kinetic form easily. The force of impact of a bullet is primarily due to the kinetic energy that is provided by the speed of the bullet. Because most bullets move at muzzle velocities faster than the speed of sound (approximately 1,130 ft/s or 343 m/s) even small bullets contain a lot of energy.
    </p>
