--- a/everyday-life.html
+++ b/everyday-life.html
@@ -189,7 +189,7 @@ Everyday Life
 </button>
 </h1>
 
-<p data-name-category="everyday life" class="description-header-info-calculator-numb"></p>
+<p data-name-category="everyday life" class="description-header-info-calculator-numb">39 calculators</p>
 
   <p class="category-info-p clamped" id="categoryText">
    You have little things in everyday life where numbers just creep into your thoughts whether in solving time, in organizing yourself or running fast decisions that shape your day. These small calculations can seem an awful lot of pressure as life goes by at crazy-fast speeds. Our everyday life calculators come in to relieve you of that burden. They simplify complex numbers to straight forward simple answers, which leaves you space to breathe and concentrate and make better decisions. Whether you're planning your schedule, managing resources or simply trying to make sense of the daily tasks, these tools help you get more confident handling life, saving time and spending your energy on what you should be.
