--- a/food.html
+++ b/food.html
@@ -187,7 +187,7 @@ Everyday Life
 </button>
 </h1>
 
-<p data-name-category="food" class="description-header-info-calculator-numb"></p>
+<p data-name-category="food" class="description-header-info-calculator-numb">2 calculators</p>
 
   <p class="category-info-p clamped" id="categoryText">
     One of the most significant  and the most pleasant  aspects of life is food. It is not just a matter of survival, but also of tradition, celebration and even identity. It brings happiness, sometimes it makes us feel guilty and other times it makes us confused whether we have taken a slice of pizza too many. That combination of feelings demonstrates precisely why food is so interesting a topic, and why it is so frequently accompanied by the figures which are worth counting.
