--- a/other.html
+++ b/other.html
@@ -188,7 +188,7 @@ Everyday Life
 </button>
 </h1>
 
-<p data-name-category="other" class="description-header-info-calculator-numb"></p>
+<p data-name-category="other" class="description-header-info-calculator-numb">15 calculators</p>
 
   <p class="category-info-p clamped" id="categoryText">
     All calculators are not of an obvious kind - and that is where this collection intends to enter. These are the instruments that do not really fit in the category of finance, science, education, health, yet, are too helpful (or so entertaining) to be omitted. Imagine it is the miscellaneous puller of Calclulo: a collection of special, useful, and even eccentric calculators which need a home like any other.
