--- a/physics.html
+++ b/physics.html
@@ -188,7 +188,7 @@ Everyday Life
 </button>
 </h1>
 
-<p data-name-category="physics" class="description-header-info-calculator-numb"></p>
+<p data-name-category="physics" class="description-header-info-calculator-numb">1 calculator</p>
 
   <p class="category-info-p clamped" id="categoryText">
     Through an effort to explain everything in nature, the process of motion of small particles, as well as behaviour of galaxies is usually referred to as physics as the most fundamental science. However, as so many formulae, principles, laws, exist, at times it may seem impossible to remember about them all. Our physics calculators come in there.
