--- a/sports.html
+++ b/sports.html
@@ -188,7 +188,7 @@ Everyday Life
 </button>
 </h1>
 
-<p data-name-category="sports" class="description-header-info-calculator-numb"></p>
+<p data-name-category="sports" class="description-header-info-calculator-numb">2 calculators</p>
 
   <p class="category-info-p clamped" id="categoryText">
    Do you happen to be an amateur sportsman? Perhaps a professional sportsman? Although you do sport only once in awhile, it is in the category sport calculators that you belong! In addition to other calculators on other sport related matters and disciplines, we provide suited runners calculators,cycling calculators and additional disciplines. Feel like asking how last season of your favorite team in baseball or in hockey was good? Get it using the winning percentage calculator! Preparing for a race? Look at our pace calculator under running calculators subcategory! Our sports calculators will make you a more conscious and good athlete with the help of the calculator. Besides, every page displays entertaining articles that contain critical sports education. Go and look into it and be sure to check back here since we continue to add new tools here!
