--- a/construction.html
+++ b/construction.html
@@ -182,7 +182,7 @@ Everyday Life
   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M680-80q-50 0-85-35t-35-85q0-6 3-28L282-392q-16 15-37 23.5t-45 8.5q-50 0-85-35t-35-85q0-50 35-85t85-35q24 0 45 8.5t37 23.5l281-164q-2-7-2.5-13.5T560-760q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35q-24 0-45-8.5T598-672L317-508q2 7 2.5 13.5t.5 14.5q0 8-.5 14.5T317-452l281 164q16-15 37-23.5t45-8.5q50 0 85 35t35 85q0 50-35 85t-85 35Zm0-80q17 0 28.5-11.5T720-200q0-17-11.5-28.5T680-240q-17 0-28.5 11.5T640-200q0 17 11.5 28.5T680-160ZM200-440q17 0 28.5-11.5T240-480q0-17-11.5-28.5T200-520q-17 0-28.5 11.5T160-480q0 17 11.5 28.5T200-440Zm480-280q17 0 28.5-11.5T720-760q0-17-11.5-28.5T680-800q-17 0-28.5 11.5T640-760q0 17 11.5 28.5T680-720Zm0 520ZM200-480Zm480-280Z"/></svg>
 </button>
 </h1>
-<p data-name-category="construction" class="description-header-info-calculator-numb"></p>
+<p data-name-category="construction" class="description-header-info-calculator-numb">1 calculator</p>
   <p class="category-info-p clamped" id="categoryText">
     It could be that you are making some renovations in your house as well as running out some arrangements in regard to a swimming pool or snow removing on your roof we have got it covered. These online construction calculators have been targeted at carpenters, painters, bricklayers, roofers, and even the craftsmen that alternate between driveways in square feet to pounds of cement on a daily basis. Every one of our tools is designed to save you a valuable amount of time and money such be it roofing calculator and stairs calculator to the construction materials calculator. You will never spend on the building materials with us!
   </p>
