--- a/education.html
+++ b/education.html
@@ -188,7 +188,7 @@ Everyday Life
 </button>
 </h1>
 
-<p data-name-category="education" class="description-header-info-calculator-numb"></p>
+<p data-name-category="education" class="description-header-info-calculator-numb">2 calculators</p>
   <p class="category-info-p clamped" id="categoryText">
     The process of studying shows calculating as a laborious attempt of rote memorization of rules and formulas, which is somewhat correct. Though, with appropriate resources, it doesn’t have to feel as much of a grind. Educational tools are aimed to facilitate, advance, and even add a fun factor to computations. These resources are aimed to help you whether it is grade, attendance, study schedule calculating, or even simplifying complex problems. It helps you regardless of whether it is a school, collage or self study. Education calculators helps you learn more with less effort to stay focused and on track.
 
