--- a/finance/profit-calculator.html
+++ b/finance/profit-calculator.html
@@ -615,7 +615,7 @@ Everyday Life
 </button>
 <button class="fav-btn" 
         data-id="profit-calc" 
-        data-name="cd calculator" 
+        data-name="Profit calculator" 
         data-label="Add to Favs">
 
   Favourite
