--- a/pwa-start-page.html
+++ b/pwa-start-page.html
@@ -16,7 +16,7 @@
 <body>
 
   <header>
-  <a class="home-link" href="/index">
+  <a class="home-link" href="/pwa-start-page">
     <img src="/assets/images/Calclulo Logo.svg" alt="Logo" /></a>
     <div class="header-btns-container">
 
