--- a/ecology/vegan-footprint-calculator.html
+++ b/ecology/vegan-footprint-calculator.html
@@ -285,7 +285,7 @@ Everyday Life
 
 <div class="input-select-wrap">
 <input inputmode="numeric" pattern="[0-9]*" type="text" id="CO2" >
-<select style="flex-basis: 40%;" id="CO2Unit">
+<select id="CO2Unit">
   <option value="grams">grams</option>
   <option value="decagrams">decagrams</option>
   <option value="kilograms">kilograms</option>
@@ -336,7 +336,7 @@ Everyday Life
 
 <div class="input-select-wrap">
 <input inputmode="numeric" pattern="[0-9]*" type="text" id="Forests" >
-<select style="flex-basis: 40%;" id="ForestsUnit">
+<select id="ForestsUnit">
   <option value="ares">Ares</option>
   <option value="acres">acres</option>
   <option value="decares">decares</option>
@@ -391,7 +391,7 @@ Everyday Life
 
 <div class="input-select-wrap">
 <input inputmode="numeric" pattern="[0-9]*" type="text" id="Grain" >
-<select style="flex-basis: 40%;" id="GrainUnit">
+<select id="GrainUnit">
   <option value="grams">grams</option>
   <option value="decagrams">decagrams</option>
   <option value="kilograms">kilograms</option>
@@ -444,7 +444,7 @@ Everyday Life
 
 <div class="input-select-wrap">
 <input inputmode="numeric" pattern="[0-9]*" type="text" id="water" >
-<select style="flex-basis: 40%;" id="WaterUnit">
+<select id="WaterUnit">
   <option value="liters">liters</option>
   <option value="hectoliters">hectoliters</option>
   <option value="gallons (US)">gallons (US)</option>
