--- a/education/75-attendance-calculator.html
+++ b/education/75-attendance-calculator.html
@@ -428,15 +428,15 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/age-calculator">Age Calculator</a>
-        <a href="/math/mean-calculator">Mean Calculator</a>
-        <a href="/math/foil-calculator">Foil Calculator</a>
+        <a href="/math/absolute-value-calculator">Absolute value</a>
+        <a href="/math/mean-calculator">Mean</a>
+        <a href="/math/foil-calculator">Foil</a>
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      The 75 Attendance Calculator helps students to determine whether they will meet the 75 percent mandatory attendance requirement by most schools, colleges, and universities. Rather than do it by hand, this calculator does all the maths for you, it tells you your safe bunkable classes, how many classes you have to attend to recover, and estimated attendance should you attend all remaining classes.
    </p>
