--- a/everyday-life/age-calculator.html
+++ b/everyday-life/age-calculator.html
@@ -340,11 +340,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar time and date calculators 📆</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/age-difference-calculator">Age Difference Calculator</a>
-        <a href="/everyday-life/valentines-day-countdown">Valentine's Day </a>
-        <a href="/everyday-life/labour-day">Labour Day </a>
+        <a href="/everyday-life/age-difference-calculator">Age difference</a>
+        <a href="/everyday-life/valentines-day-countdown">Valentine's day </a>
+        <a href="/everyday-life/labour-day">Labour day </a>
       </div>
     </div>
 <article class="description-txt">
