--- a/everyday-life/age-difference-calculator.html
+++ b/everyday-life/age-difference-calculator.html
@@ -261,11 +261,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar time and date calculators 📆</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/age-calculator">Age Calculator</a>
-        <a href="/everyday-life/fathers-day-countdown">Father's Day </a>
-        <a href="/everyday-life/mothers-day-countdown">Mother's Day </a>
+        <a href="/everyday-life/age-calculator">Age</a>
+        <a href="/everyday-life/fathers-day-countdown">Father's day </a>
+        <a href="/everyday-life/mothers-day-countdown">Mother's day </a>
       </div>
     </div>
 <article class="description-txt">
