--- a/everyday-life/labour-day.html
+++ b/everyday-life/labour-day.html
@@ -209,11 +209,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
         <a href="/everyday-life/christmas-countdown">Christmas </a>
-        <a href="/everyday-life/world-health-day">World Health Day</a>
-        <a href="/everyday-life/world-environment-day">World Environment Day</a>
+        <a href="/everyday-life/world-health-day">World health day</a>
+        <a href="/everyday-life/world-environment-day">World environment day</a>
       </div>
     </div>
 <article class="description-txt">
