--- a/everyday-life/world-cancer-day-countdown.html
+++ b/everyday-life/world-cancer-day-countdown.html
@@ -203,7 +203,7 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar countdown calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
         <a href="/everyday-life/world-mental-health-day-countdown">World mental health day</a>
         <a href="/everyday-life/world-health-day">World health day</a>
