--- a/everyday-life/world-environment-day.html
+++ b/everyday-life/world-environment-day.html
@@ -208,7 +208,7 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar countdown calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
         <a href="/everyday-life/earth-day-countdown">Earth day</a>
         <a href="/everyday-life/mothers-day-countdown">Mother's day</a>
