--- a/everyday-life/world-health-day.html
+++ b/everyday-life/world-health-day.html
@@ -215,11 +215,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/world-environment-day">World Environment Day</a>
-        <a href="/everyday-life/valentines-day-countdown">Valentine's Day </a>
-        <a href="/everyday-life/new-year-countdown-calculator">New Year </a>
+        <a href="/everyday-life/world-environment-day">World environment day</a>
+        <a href="/everyday-life/valentines-day-countdown">Valentine's day </a>
+        <a href="/everyday-life/new-year-countdown-calculator">New year </a>
       </div>
     </div>
 <article class="description-txt">
