--- a/everyday-life/world-mental-health-day-countdown.html
+++ b/everyday-life/world-mental-health-day-countdown.html
@@ -203,7 +203,7 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar countdown calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
         <a href="/everyday-life/christmas-countdown">Christmas</a>
         <a href="/everyday-life/easter-countdown">Easter</a>
