--- a/chemistry/atom-calculator.html
+++ b/chemistry/atom-calculator.html
@@ -474,7 +474,7 @@ Clear all changes
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      The atom calculator lets you calculate the atomic number and the mass number based on the number of atom components - protons, neutrons, and electrons.
    </p>
