--- a/education/cgpa-calculator-nigeria.html
+++ b/education/cgpa-calculator-nigeria.html
@@ -232,15 +232,15 @@ Clear all changes
 </section>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
-        <a href="/math/foil-calculator">Foil Calculator</a>
-        <a href="/finance/custom-duty-calculator-for-vehicles-nigeria">Custom Duty Calculator</a>
-        <a href="/finance/nigeria-personal-income-tax-calculator">PIT Calculator Nigeria</a>
+        <a href="/math/foil-calculator">Foil</a>
+        <a href="/finance/custom-duty-calculator-for-vehicles-nigeria">Car custom nigeria</a>
+        <a href="/finance/nigeria-personal-income-tax-calculator">Personal income tax nigeria</a>
       </div>
     </div>
 <article class="description-txt">
-   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">tool</span></h2>
+   <h2 class="about-header-description-txt">About this <span class="this-calculator-ab-hd">calculator</span></h2>
    <p>
      The Nigerian university CGPA Calculator is a tool that allows students to calculate their Cumulative Grade point average (CGPA) with precision according to the grading scale that is applicable in Universities such as the University of Ibadan. This calculator enables students to enter the grades of their course work, the number of credit units, and which semester before calculating the semester GPA and the overall CGPA in a short time.
    </p>
@@ -509,34 +509,49 @@ transition: .2s;
     background: #C00C0C30;
   }
 
-  .course-row input[type=text] , .course-row input[type=number] {
-            width: 90%;
-            padding: 13px;
-            margin-bottom: .4em;
-            font-size: 17px;
-            border: 1.5px solid #464BFF3D;
-            border-radius: 8px;
-            outline: none;
-            transition: .1s;
-            font-family: "young";
-            background: #fff;
-        }
-        .course-row input[type="text"] {
+  .course-row input[type=text] , .course-row input[type=number] , .course-row select {
+            box-sizing: border-box;
+  font-size: 16px;
+  line-height: 20px;
+  color: #111;
+  border: 1.4px solid #464BFF2B;
+  border-radius: 8px;
+  padding: 12px 6px 12px 12px;
+  min-height: 32px;
+  background-color: #fff;
+  transition: border-color 0.2s ease, box-shadow 0.2s ease;
+  outline: none;
+  width: 100%;
+  font-family: zalando;
+  transition: .3s;
+  background: #F8F9FB;
+}
+.course-row input[type=text] {
+  font-family: Alansans;
   flex-basis: 50%;
 }
+.course-row input[type=text]::placeholder {
+  font-family: young;
+}
         .course-row input[type="number"]{
-          flex-basis: 20%;
+          flex-basis: 25%;
           text-align: center;
         }
         .course-row select {
-          flex-basis: 30%;
-        }
-        .course-row input[type=text], .course-row input[type=number]::placeholder{
-          font-size: 16px;
+          flex-basis: 25%;
+          appearance: none;
+-webkit-appearance: none;
+-moz-appearance: none;
+background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30.727 30.727' xml:space='preserve'><path fill='%232428AF' d='M29.994 10.183 15.363 24.812.733 10.184a2.5 2.5 0 1 1 3.536-3.536l11.095 11.093L26.461 6.647a2.5 2.5 0 1 1 3.533 3.536'/></svg>");
+background-repeat: no-repeat;
+background-position: right 10px center;
+background-size: 14px;
+font-family: alanSans;
+font-weight: 600;
         }
                 .course-row input[type="text"]:focus , select:focus ,.course-row input[type="number"]:focus{
-          border: 1.5px solid #464BFF;
-outline: 3px solid #464BFF14;
+border-color: #464BFF;
+box-shadow: 0 0 0 3px #464BFF17;
         }
   .gpa-display {
     text-align: right;
@@ -575,7 +590,7 @@ outline: 3px solid #464BFF14;
   }
   .course-header {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 40px; /* Matches inputs & delete button */
+  grid-template-columns: 2fr 1fr 1fr 40px;
   font-weight: 600;
   font-family: lexend;
   font-size: .95em;
