--- a/everyday-life/boyfriend-day.html
+++ b/everyday-life/boyfriend-day.html
@@ -203,11 +203,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar countdown calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
         <a href="/everyday-life/girlfriend-day">Girlfriend's day</a>
         <a href="/everyday-life/easter-countdown">Easter </a>
-        <a href="/everyday-life/new-year-countdown-calculator">New Year </a>
+        <a href="/everyday-life/new-year-countdown-calculator">New tear </a>
       </div>
     </div>
 </div>
