--- a/everyday-life/christmas-countdown.html
+++ b/everyday-life/christmas-countdown.html
@@ -203,9 +203,9 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/new-year-countdown-calculator">New Year </a>
+        <a href="/everyday-life/new-year-countdown-calculator">New year </a>
         <a href="/everyday-life/easter-countdown">Easter </a>
         <a href="/everyday-life/halloween-countdown-calculator">Halloween </a>
       </div>
