--- a/everyday-life/fathers-day-countdown.html
+++ b/everyday-life/fathers-day-countdown.html
@@ -209,11 +209,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/mothers-day-countdown">Mother's Day </a>
+        <a href="/everyday-life/mothers-day-countdown">Mother's day </a>
         <a href="/everyday-life/easter-countdown">Easter </a>
-        <a href="/everyday-life/new-year-countdown-calculator">New Year </a>
+        <a href="/everyday-life/new-year-countdown-calculator">New year </a>
       </div>
     </div>
     <article class="description-txt">
