--- a/everyday-life/mothers-day-countdown.html
+++ b/everyday-life/mothers-day-countdown.html
@@ -210,11 +210,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life/fathers-day-countdown">Father's Day </a>
+        <a href="/everyday-life/fathers-day-countdown">Father's day </a>
         <a href="/everyday-life/easter-countdown">Easter </a>
-        <a href="/everyday-life/new-year-countdown-calculator">New Year </a>
+        <a href="/everyday-life/new-year-countdown-calculator">New year </a>
       </div>
     </div>
 <article class="description-txt">
