--- a/everyday-life/world-autism-awareness-day-countdown.html
+++ b/everyday-life/world-autism-awareness-day-countdown.html
@@ -203,11 +203,11 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar countdown calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
         <a href="/everyday-life/world-literacy-day-countdown">Literacy day</a>
-        <a href="/everyday-life/easter-countdown">Easter countdown</a>
-        <a href="/everyday-life/new-year-countdown-calculator">New year countdown</a>
+        <a href="/everyday-life/easter-countdown">Easter</a>
+        <a href="/everyday-life/new-year-countdown-calculator">New year</a>
       </div>
     </div>
 </div>
