--- a/everyday-life/world-food-day-countdown.html
+++ b/everyday-life/world-food-day-countdown.html
@@ -203,7 +203,7 @@ Clear all changes
     </div>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar countdown calculators</h2>
+      <h2>Similar countdown calculators 🗓️</h2>
       <div class="similar-calculators">
         <a href="/everyday-life/world-animal-day-countdown">Animal day</a>
         <a href="/everyday-life/world-ocean-day-countdown">Ocean day</a>
